tests/ui/demux/rest_pattern_fails.stderr
error: expected identifier
 --> $DIR/rest_pattern_fails.rs:4:15
  |
4 |     demux!(A, .., B, C);
  |               ^^

error: expected identifier
 --> $DIR/rest_pattern_fails.rs:5:20
  |
5 |     demux!(A, B, C,, ..);
  |                    ^

error: expected identifier
 --> $DIR/rest_pattern_fails.rs:6:14
  |
6 |     demux!(.., A, B, C);
  |              ^

error: expected identifier
 --> $DIR/rest_pattern_fails.rs:8:21
  |
8 |     demux!(A, B, C, ..);
  |                     ^^

error: expected `,`
 --> $DIR/rest_pattern_fails.rs:9:21
  |
9 |     demux!(A, B, C  ..);
  |                     ^^

error: expected identifier
  --> $DIR/rest_pattern_fails.rs:11:14
   |
11 |     demux!(.., A, B, C, ..);
   |              ^

error: expected identifier
  --> $DIR/rest_pattern_fails.rs:12:25
   |
12 |     demux!(..  A, B, C, ..);
   |                         ^^

error: expected identifier
  --> $DIR/rest_pattern_fails.rs:14:15
   |
14 |     demux!(A, ..  B, C, ..);
   |               ^^

error: expected identifier
  --> $DIR/rest_pattern_fails.rs:15:15
   |
15 |     demux!(A, .., B, C, ..);
   |               ^^
