tests/ui/demux/rest_pattern_fails.rs
use mux_stream_macros::demux;

fn main() {
    demux!(A, .., B, C);
    demux!(A, B, C,, ..);
    demux!(.., A, B, C);

    demux!(A, B, C, ..);
    demux!(A, B, C  ..);

    demux!(.., A, B, C, ..);
    demux!(..  A, B, C, ..);

    demux!(A, ..  B, C, ..);
    demux!(A, .., B, C, ..);
}
